# project-2_mihailov_dpo_nod

./: .gitignore  Makefile  README.md  pyproject.toml
src/: config.yaml
src/primitive_db/: core.py  engine.py  main.py  util_read_config.py  utils.py
